@@ -15,13 +15,10 @@ valid-environments: Valid types are: {0}.
 
 # Creation commands
 ## Create command
-
 world.permission-name: access
 world.permission-description: Allow access to {0}
 world.wildcard-permission-description: Allow access to all worlds.
 world.not-allowed-to-enter-world: &REDYou are not allowed to enter that world.
-
-
 ### Create command conversation
 createcommand.name: create
 createcommand.description: Create a new world.
@@ -42,7 +39,6 @@ createcommand.random: random
 createcommand.none: none
 createcommand.yes: yes
 createcommand.no: no
-
 ## Load command
 loadcommand.name: load
 loadcommand.description: Load a world mananged by DimensionDoor
@@ -65,7 +61,7 @@ removecommand.world-is-not-managed: {0} is not managed by DimensionDoor.
 removecommand.remove-data-also: &YELLOWYou will still need to remove the world directory.
 removecommand.must-specify-a-world-name: You must specify a world name!
 removecommand.list-worlds-hint: You may only remove worlds configured by DimensionDoor.
-
+## Unload command
 unloadcommand.name: unload
 unloadcommand.description: Unload a world from memory..
 unloadcommand.permission-description: Allow users to unload worlds.
@@ -76,15 +72,21 @@ unloadcommand.world-unloaded: {0} has been unloaded.
 unloadcommand.must-specify-a-world-name: You must specify a world name!
 unloadcommand.list-worlds-hint: You may only unload worlds configured by DimensionDoor.
 
-world-unloaded: &YELLOW{0} &GREENhas been unloaded.
 
 # Management commands
+## List command
 listcommand.name: list
 listcommand.description: List all the available worlds.
 listcommand.permission-description: Allow users to list all available worlds.
 listcommand.usage:
 listcommand.header: &LIGHT_PURPLECurrently managing &AQUA{0} &LIGHT_PURPLEworlds:
-
+## Spawn command
+spawncommand.name: spawn
+spawncommand.description: Set the spawn point of the world.
+spawncommand.permission-description: Allow users to set the spawn points of worlds.
+spawncommand.usage: <name>
+spawncommand.spawn-set: &GREENSpawn in &YELLOW{0} &GREENset to your location.
+## Clear command
 clearcommand.name: clear
 clearcommand.description: Clear all monsters and animals from a world.
 clearcommand.permission-description: Allow users to clear monsters and animals from a world.
@@ -93,16 +95,17 @@ clearcommand.world-is-not-managed: {0} is not managed by DimensionDoor.
 clearcommand.clear-report: &YELLOW{0} &GREENmonsters and animals cleared from &YELLOW{1}&GREEN.
 clearcommand.must-specify-a-world-name: You must specify a world name!
 clearcommand.list-worlds-hint: You may only clear entities from loaded worlds.
-
+## Info command
 infocommand.name: info
 infocommand.description: Get information about a world..
 infocommand.permission-description: Allow users to get information about worlds.
 infocommand.usage: <name>
 infocommand.header: &LIGHT_PURPLEWorld infomation for &AQUA{0}:
+### List items
 infocommand.list-item: &YELLOW- {0}: &GREEN{1}
 infocommand.seed: seed
 infocommand.enabled: enabled 
-infocommand.difficulty = difficulty
+infocommand.difficulty: difficulty
 infocommand.environment: environment
 infocommand.gamemode: game mode
 infocommand.isolated_chat: isolated chat
@@ -117,46 +120,30 @@ infocommand.world_type: world type
 infocommand.world-is-not-managed: {0} is not managed by DimensionDoor.
 infocommand.must-specify-a-world-name: You must specify a world name!
 infocommand.list-worlds-hint: Use the list command to see worlds you can choose.
-
-
-teleportcommand-name: teleport
-teleportcommand-description: Teleport to another world.
-teleportcommand-permission-description: Allow users to teleport to other worlds.
-teleportcommand-usage: <name>
-
-world-not-loaded: {0} is not loaded!
-
-spawncommand.name: spawn
-spawncommand.description: Set the spawn point of the world.
-spawncommand.permission-description: Allow users to set the spawn points of worlds.
-spawncommand.usage: <name>
-spawncommand.spawn-set: &GREENSpawn in &YELLOW{0} &GREENset to your location.
-
-listcommand-name: list
-listcommand-description: List all the available worlds.
-listcommand-permission-description: Allow users to list all available worlds.
-listcommand-usage: 
-
-list-header: &LIGHT_PURPLECurrently managing &AQUA{0} &LIGHT_PURPLEworlds:
-
-modifycommand-name: modify
-modifycommand-description: Modify world settings.
-modifycommand-permission-description: Allow users to modify world settings.
-modifycommand-usage: <name> <attribute> <value>
-
-must-specify-valid-attribute: You must specify a valid attribute!
-must-specify-valid-attribute: You must speficy a value!
-value-hint: This depends on the attribute you want to change.
-attribute-list: Valid attributes include: {0}
-must-specify-valid-difficulty: You must specify a valid difficulty.
-difficulty-list: Choose between: 
-must-specify-valid-game-mode: You must specify a valid game mode.
-difficulty-list: Choose between: 
-change-report: &GREENSet &YELLOW{0} &GREENto &YELLOW{1} for &YELLOW{2}&GREEN
-
-infocommand-name: info
-infocommand-description: Get information about a world..
-infocommand-permission-description: Allow users to get information about worlds.
-infocommand-usage: <name>
+## Telport command
+teleportcommand.name: teleport
+teleportcommand.description: Teleport to another world.
+teleportcommand.permission-description: Allow users to teleport to other worlds.
+teleportcommand.usage: <name>
+teleportcommand.world-not-loaded: {0} is not loaded!
+teleportcommand.must-specify-a-world-name: You must specify a world name!
+teleportcommand.list-worlds-hint: Use the list command to see worlds you can choose.
+## Modify Command
+modifycommand.name: modify
+modifycommand.description: Modify world settings.
+modifycommand.permission-description: Allow users to modify world settings.
+modifycommand.permission-per-attribute-description: Allow users to modify {0} attribute on worlds
+modifycommand.usage: <name> <attribute> <value>
+modifycommand.must-specify-valid-attribute: You must specify a valid attribute!
+modifycommand.must-specify-valid-value: You must speficy a value!
+modifycommand.value-hint: This depends on the attribute you want to change.
+modifycommand.attribute-list: Valid attributes include: {0}
+modifycommand.must-specify-valid-difficulty: You must specify a valid difficulty.
+modifycommand.choose-between: Choose between: {0}
+modifycommand.must-specify-valid-game-mode: You must specify a valid game mode.
+modifycommand.success-report: &GREENSet &YELLOW{0} &GREENto &YELLOW{1} &GREENfor &YELLOW{2}.
+modifycommand.world-is-not-managed: {0} is not managed by DimensionDoor.
+modifycommand.must-specify-a-world-name: You must specify a world name!
+modifycommand.list-worlds-hint: Use the list command to see worlds you can choose.
 
 
