@@ -1,5 +1,6 @@
 Changelog for DimensionDoor (v2.1.1-SNAPSHOT)
 
+2012-08-01 00:16:07 +0100    finished info command (James Richardson)
 2012-07-31 23:42:48 +0100    implemented info command (James Richardson)
 2012-07-31 23:25:58 +0100    added ClearCommand (James Richardson)
 2012-07-31 23:20:51 +0100    remove old classes ready for refactoring (James Richardson)
